demo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo-service
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
